[package]
name = "demangle"
version = "12.1.2"
authors = ["Fredrik Kjellberg <fredrik.kjellberg@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic = { path = "../../symbolic", features = ["demangle"] }
